# wasm-oidc-plugin

./: .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md  audit.toml  cliff.toml  deny.toml  docker-compose.yaml  envoy.yaml  test.py  test.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  documentation.yml  release.yml  test.yml
demo/: README.md  certificate-production.yml  configmap.yml  deployment-pre-built.yml  hpa.yaml  ingress.yml  service.yml
integration-tests/: .env.template  Dockerfile  README.md  docker-compose.yaml  envoy.yaml  requirements.txt  test.py
k8s/: certificate-production.yml  ci.yml  configmap.yml  deployment-init-container.yaml  deployment-initContainer.yaml  deployment-pre-built.yml  deployment.yaml  hpa.yaml  ingress.yml  secret.yaml  service.yml
src/: auth.rs  config.rs  cookie.rs  discovery.rs  error.rs  html.rs  lib.rs  pause.rs  responses.rs  session.rs
