[package]
publish = false
name = "wasm-oidc-plugin"
version = "0.0.1"
authors = ["WWU Cloud Developer <cloud@uni-muenster.de"]
description = "WASM OIDC Envoy Plugin"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# logging
log = "0.4.17"

# proxy-wasm
proxy-wasm = "0.2.1"

# json & url parsing
url = "2.3.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# base64
base64 = "0.21.0"

# jsonwebtoken
# jwt-simple = "0.9.4"
# jsonwebkey = "0.3.2"

# dotenv
dotenv = "0.15.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
